onboardingbox centered on desktop + themebtn out of viewport fix

--- a/src/scss/modules/_info-popup-box.scss
+++ b/src/scss/modules/_info-popup-box.scss
@@ -43,7 +43,7 @@
     bottom: 33%;
     // centers the box
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
     z-index: 10;
 
     font-family: $fMain;
@@ -55,5 +55,5 @@
     animation: grow 1s ease-out alternate infinite;
 }
 @keyframes grow {
-    100% { transform: scale(1.1) translate(-50%, -50%) }
+    100% { transform: scale(1.1) translate(-50%) }
 }
