--- a/src/scss/modules/_settings.scss
+++ b/src/scss/modules/_settings.scss
@@ -77,6 +77,7 @@
     @include btnLabel;
     display: block;
     margin: $spaceM auto $spaceM;
+    min-width: 180px;
     transition: 200ms;
 }
 
